# grupo4

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: chatbot-whatsapp.yml  deploy-docusaurus.yml  interface.yml  mqtt_tests.yml  terraform.yml
docs/: docusaurus.config.js  nicola.py  package-lock.json  package.json  sidebars.js
docs/docs/: 1. intro.md  Apresentações.md  Problema.md  Sumário.md  intro.md
docs/docs/1. Contexto da Indústria/: 1.5 Matriz de Oceano Azul.md
docs/docs/1. Problema/: 1.1 Descrição do Problema.md
docs/docs/2. Contexto da Indústria/: 3.1 Análise de Impacto Ético.md  3.3 TAM-SAM-SOM.md
docs/docs/2. Proposta de Solução/: 2.1 Arquitetura da Solução.md  2.1 Arquitetura da solução.md  2.2 Levantamento de Requisitos.md  2.2 Personas.md  2.3 Histórias de Usuário.md  2.4 Levantamento de Requisitos.md  2.5 Canvas Proposta de Valor.md  2.6 Jornada do Usuário.md
docs/docs/3. Contexto da Indústria/: 3.1 Análise de Impacto Ético.md  3.3 Análise de Mercado.md  3.4 Análise Financeira.md  3.5 Matriz de Riscos.md  3.6 Matriz de Oceano Azul.md  Histórias de usuário.md  Matriz de Riscos.md
docs/docs/3. Desenvolvimento da Solução/: 3. Desenvolvimento da Solução.md  3.1 Chatbot Whatsapp.md  3.1 Design Patterns.md  3.1 Mapeamento e navegação.md  3.1 Mapeamento e navegação.mdx  3.10 Demonstração.md  3.11 Terraform e AWS.md  3.2 Chatbot.md  3.2 Mapeamento e navegação.md  3.3 Banco de Dados.md  3.3 Chatbot.md  3.4 Banco de Dados.md  3.5 LLM.md  3.6 Interface de admin.md  3.6 Logs.md  3.7 Interface do robô.md  3.7 WebSocket.md  3.8 Backend de interfaces.md  3.8 Demonstração.md  3.9 Logs.md
docs/docs/3. Proposta de Solução/: 2.6 Jornada do Usuário.md
docs/docs/4. Manual do Usuário/: 4.1 Manual do Usuário.md
docs/docs/5. Executando/: 1. Introdução.md  2. Setup inicial.md  3. Preparando o robõ.md  4. Iniciando a bridge.md  5. Iniciando outros serviços.md
docs/docs/Business/: Analíse financeira.md  Análise de mercado.md  Análise financeira.md  Histórias de usuário.md  Matriz de Riscos.md  Personas.md
docs/docs/Manual do Usuário/: Manual do Usuário.md
docs/docs/Referências/: Análise Financeira.md  Análise de mercado.md
docs/docs/Sprint 2/: Chatbot CLI.md
docs/docs/Sprint 3/: Chatbot no Whatsapp.md  LLM.md
docs/docs/Sprint 4/: Acessibilidade no Whatsapp.md  Interface de admin.md  Interface do robô.md  TTS e STT no Whatsapp.md
docs/docs/Sprint 5/: Demo das interfaces.md  Github - Actions.md  Refinamentos da interface de admin.md  TTS e STT com Google Cloud.md
docs/src/pages/: index.js  index.module.css
infrastructure/: .env-example  database.tf  ec2.tf  elastic_container_registry.tf  elastic_ip.tf  network.tf  provider.tf  security_group.tf  sg.tf  terraform.tfstate.backup  terraform.tfvars  variables.tf  vpc.tf
log/: latest_list
src/ROS/: .gitignore
src/ROS/cpp_srv_turtlesim/: CMakeLists.txt  package.xml
src/ROS/cpp_subscriber_turtlesim/: CMakeLists.txt  package.xml
src/ROS/mapping_launch/: CMakeLists.txt  package.xml
src/ROS/ros_turtles/: package.xml
src/TEST-microservices/: README.md  docker-compose.yaml
src/TEST-microservices/chatbot/: package-lock.json  package.json
src/TEST-microservices/gateway/: package-lock.json  package.json
src/[OLD]chatbot/: Dockerfile  package.json
src/[OLD]chatbot/src/: utils.ts
src/admin-interface/: package-lock.json  package.json
src/admin-interface/.next/: trace
src/admin-interface/app/: page.js
src/backend/: send_websocket_cords.py  websocket_server.py
src/bridge/: .dockerignore  .gitignore  Dockerfile  README.md  battery_bash.sh  battery_zsh.sh  bridge.code-workspace  mapping_gazebo_bash.sh  mapping_gazebo_zsh.sh  mapping_turtlebot3_bash.sh  mapping_turtlebot3_zsh.sh  navigation_gazebo_bash.sh  navigation_gazebo_zsh.sh  navigation_turtlebot3_bash.sh  navigation_turtlebot3_zsh.sh  requirements.txt  stream_zsh.sh  streamer_zsh.sh
src/bridge/assets/: map_gazebo.pgm  map_gazebo.yaml  map_turtlebot3.pgm  map_turtlebot3.yaml
src/bridge/src/vallet/: package.xml  setup.cfg  setup.py
src/bridge/src/vallet/launch/: mapping_gazebo.launch.py  mapping_turtlebot3.launch.py  navigation_gazebo.launch.py  navigation_turtlebot3.launch.py
src/bridge/src/vallet/vallet/: __init__.py  battery.py  battery_mock.py  emergency_stop.py  initial_pose.py  interface.py  logger.py  pose_queue.py  publisher.py  streamer.py  subscriber.py  task_queue.py  vallet.py
src/bridge/src/vallet_cpp/: CMakeLists.txt  package.xml
src/bridge/src/vallet_cpp/launch/: navigation_turtlebot3.launch.py
src/bridge/src/vallet_cpp/src/battery/: main.cpp
src/bridge/src/vallet_cpp/src/battery/collector/: collector.cpp  collector.h
src/bridge/src/vallet_cpp/src/logger/: main.cpp
src/bridge/src/vallet_cpp/src/logger/text_saver/: text_saver.cpp  text_saver.h
src/bridge/src/vallet_cpp/src/pose_queue/: main.cpp
src/bridge/src/vallet_cpp/src/pose_queue/queue/: queue.cpp  queue.h
src/bridge/src/vallet_cpp/src/streamer/: main.cpp
src/bridge/src/vallet_cpp/src/streamer/client/: client.cpp  client.h
src/bridge/src/vallet_cpp/src/vallet/: main.cpp
src/bridge/src/vallet_cpp/src/vallet/robot/: robot.cpp  robot.h
src/bridge/src/vallet_msgs/: CMakeLists.txt  package.xml
src/bridge/src/vallet_msgs/msg/: Log.msg  Task.msg
src/chat_sprint3/: aaa.py  chat.py  items.txt
src/chatbot/: .dockerignore  .eslintrc  .gitignore  .prettierrc  Dockerfile  json.json  nest-cli.json  package-lock.json  package.json
src/chatbot/src/: config.ts  (+4 more)
src/excel-export/: export.py  output_file.xlsx
src/export-excel/: excel_export.py
src/express-back/: index.js  package-lock.json  package.json  populate.py
src/expressions-api/: index.py  speech.py
src/interface/: docker-compose.yml  ec2_key_par.pem
src/interfaces/: CMakeLists.txt  package.xml
src/my-app/: package-lock.json  package.json
src/robot/: .gitignore
src/testes_sprint2/robot/ros_turtles/: CMakeLists.txt
src/ui/: package-lock.json  package.json
src/websocket_tests/: requirements.txt  send_websocket_cords.py  websocket_server.py
(+291 files in other folders)
